# phone_detection_app

./: README.md  config.json  exclude.txt  main.py  pyproject.toml  requirements.txt  test.py
config/: settings.json
src/admin/: admin_panel.py  admin_utils.py  logs_tab.py  settings_tab.py  styles.py  utils.py
src/core/: camera.py  config.py  detector.py  error_window.py  lock_screen.py  logger.py  system_info.py
src/infra/: critical_error.py  enable_autostart.py  is_admin.py  minimize_all.py  send_alert_email.py  send_tg_alert.py  set_admin_only_acess.py  take_screenshot.py
src/user/: stream_window.py  user_app.py
